# ProductHub

./: .gitignore  README.md  start-dev.ps1  产品说明指南.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start-backend.ps1
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_sku_supersede.py  a7b8c9d0e1f2_user_preferences.py  b2c3d4e5f6a7_node_supplier.py  b49c51d5498b_initial_schema.py  c1a2b3d4e5f6_add_slot_variant_group.py  c3d4e5f6a7b8_supplier_metadata.py  d4e5f6a7b8c9_part_spec_config.py  e5f6a7b8c9d0_part_lead_time.py  f1a2b3c4d5e6_price_supersede.py  f6a7b8c9d0e1_perf_indexes.py
backend/app/: main.py
backend/app/core/: audit.py  config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  counter.py  imports.py  parts.py  price.py  quote.py  sku.py  template.py  user.py
backend/app/schemas/: auth.py  config.py  parts.py  quote.py  sku.py  (+1 more)
backend/producthub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: accept_clone_db.py  accept_gate2_read.py  accept_gate2_write.py  accept_measure_detail_queries.py  backfill_sku_names.py  build_catalog.py  check_schema.py  cleanup_zzz_test_data.sql  dump_catalog.py  estimate_sku_space.py  fix_part_supplier_mismatch.py  gen_import_template.py  rebuild_co2_spray.py  seed.py  seed_bulk_skus.py  smoke_health.py  user_test_rounds.py  verify_bulk.py  verify_sp_pair.py
backend/tests/: conftest.py  test_api_redlines.py  test_db_constraints.py  test_direct_purchase.py  test_fingerprint.py  test_health.py  test_import.py  test_m2.py  test_part_detail.py  test_price_supersede.py  test_shelf.py  test_supplier_fingerprint.py  test_template_admin.py  test_user_round_fixes.py  test_variant_group.py
(+86 files in other folders)
