[project]
name = "producthub-backend"
version = "0.1.0"
description = "ProductHub 产品中台后端（北京合胜）"
requires-python = ">=3.12"
# 上界=现装大版本的下一个大版本，封住跨大版本的破坏性变更/安全回归，仍允许补丁与小版本升级。
# 现装基线见 deploy 记录；改上界须确认 >= 现装版本，否则 pip 解析冲突。
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0.36,<3.0",
    "alembic>=1.14,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "PyJWT>=2.9,<3.0",
    "bcrypt>=4.2,<6.0",
    "openpyxl>=3.1,<4.0",
    "python-multipart>=0.0.12,<1.0",
    "pypinyin>=0.53,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
